GC Dental/src/objects/Campaign__c.object
<CustomObject>
    <fields>
        <fullName>Activation_Date__c</fullName>
        <label>Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campaign_Description__c</fullName>
        <label>Campaign Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Deactivation_Date__c</fullName>
        <label>Deactivation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <label>Campaign</label>
    <listViews>
        <fullName>Active_Campaigns</fullName>
        <columns>NAME</columns>
        <columns>Activation_Date__c</columns>
        <columns>Deactivation_Date__c</columns>
        <columns>Campaign_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>isActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Activation_Date__c</columns>
        <columns>Deactivation_Date__c</columns>
        <columns>Campaign_Description__c</columns>
        <columns>isActive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaigns</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>